# plover-zh-yawei

./: .gitmodules  README.md  layout_display.json  setup.cfg
dictionary/: cleanup.py
dictionary/zh-dict/: brief.json  main.json  misc.json
dictionary/zh-dict-generator/: README.md  combine.py  conv_eng.py  conversion.py  main.py
plover_zh_yawei/: extgeminipr.py  system.py
plugin/: .gitignore  setup.cfg
plugin/plover_zh_yawei/: commands.py  system.py  system_extended.py
