[metadata]
name = plover_zh_yawei
version = 0.0.1
description = Chinese system for Plover
author = Luke Silva
author_email = yawei-plover@lukesilva.com
license = GNU General Public License v2 or later (GPLv2+)

classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev1
include_package_data = True
packages =
	plover_zh_yawei

[options.entry_points]
plover.system =
  YaWei = plover_zh_yawei.system
  YaWeiExtended = plover_zh_yawei.system_extended
plover.meta =
  yawei_pick_char = plover_zh_yawei.commands:pick_char
plover.machine =
	YaweiExtendedGeminiPR = plover_zh_yawei.extgeminipr:YaweiExtGeminiPr